[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="v1_ll"
path="src/v1_ll.rs"

[[bin]]
name="v2_dbl"
path="src/v2_dbl.rs"

[[bin]]
name="v3_bintree"
path="src/v3_bintree.rs"

[[bin]]
name="catalan"
path="src/catalan.rs"

[[bin]]
name="power-set"
path="src/set.rs"
